--- a/css/ok/ok.css
+++ b/css/ok/ok.css
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: 'apercu';
-  src: url('lib/font/apercu_mono_pro.otf') format('otf');
-}
-
-body {
-	font-family: apercu, Fallback, 'Droid Sans Mono';
-}
-
 small.ok-orange {
 	background-color: rgb(255, 84, 73);
 	padding: 3px;
@@ -26,12 +17,12 @@ span.bold {
 	font-weight: bold;
 }
 
-#about, #how, #goals, #support, #whats-next, #important-stuff {
-	text-align: left;
+.left p {
+	margin: 30px 0;
 }
 
-#about p, #how p, #goals p {
-	margin: 30px 0;
+.left {
+	text-align: left;
 }
 
 #support li, #whats-next li, #important-stuff li {
