--- a/css/ok/ok.css
+++ b/css/ok/ok.css
@@ -1,3 +1,15 @@
+@import url('http://fonts.googleapis.com/css?family=Titillium+Web:300');
+
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6,
+.reveal {
+  font-family: 'Titillium Web', sans-serif;
+}
+
 small.ok-orange {
 	background-color: rgb(255, 84, 73);
 	padding: 3px;
@@ -69,5 +81,10 @@ span.bold {
     text-shadow: 0 0 2px #c00;
     box-shadow: 0 0 2px #c00;
     background-color: rgba(255,255,255,0.6);
+}
+
+.reveal section img, iframe {
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
