--- a/css/ok/ok.css
+++ b/css/ok/ok.css
@@ -89,3 +89,11 @@ span.bold {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+section > .copyright-note {
+	font-size: 14px;
+	display: block;
+	text-align: right;
+	margin-right: 25px;
+	margin-top: -25px;
+	color: grey !important;
+}
